<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ClientProfileActivity">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/textView_fullName"
            android:textColor="@color/blue"
            android:textSize="@dimen/textView_Employee" />

        <TextView
            android:id="@+id/clientProfileFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_Name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/textView_email"
            android:textColor="@color/blue"
            android:textSize="@dimen/textView_Employee" />

        <TextView
            android:id="@+id/clientProfileEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_email" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/textView_birth"
            android:textColor="@color/blue"
            android:textSize="@dimen/textView_Employee" />

        <TextView
            android:id="@+id/clientProfileBirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_date" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/textView_train_plan"
            android:textColor="@color/blue"
            android:textSize="@dimen/textView_Employee" />

        <TextView
            android:id="@+id/clientProfileTrainPlan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_train" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/textView_personal_trainer"
            android:textColor="@color/blue"
            android:textSize="@dimen/textView_Employee" />

        <TextView
            android:id="@+id/clientProfilePersonalTrainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_personal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="payment"
                android:text="Pagar"
                app:backgroundTint="@color/blue" />
        </LinearLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>

</LinearLayout>