<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context=".MainActivity">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/blue"
        android:textSize="@dimen/welcome_Size"
        android:textStyle="bold"
        android:fontFamily="@font/alfa_slab_one"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
>
    <Button
        android:id="@+id/btn_client"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_client_option"
        android:width="@dimen/btn_main_activity_width"
        android:height="@dimen/btn_main_activity_height"
        android:onClick="moveToClient"
        />

    <Button
        android:id="@+id/btn_employee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_employee_option"
        android:width="@dimen/btn_main_activity_width"
        android:height="@dimen/btn_main_activity_height"
        android:onClick="moveToEmployee"
        />
    </LinearLayout>

</LinearLayout>
